src/pages/experience/Experience.css
.experienceContent {
    width: 100vw;
    min-height: 80vh;
    margin: 25px auto 55px auto;
}

.skills {
    padding-top: 15px;
    width: 65vw;
    margin: auto;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
}

.skillsList {
    text-align: start;
    padding: 10px;
    background-color: white;
    border: 1px solid lightgrey;
}

.skillsTitle {
    font-size: 20px;
}

.timelineElementInfo {
    text-align: justify;
}

.vertical-timeline-element-title {
    text-align: left;
}

@media screen and (max-width: 499) {
    .skillsList {
        width: 85vw;
    }
}

@media screen and (min-width: 500px) and (max-width: 1439px) {
    .skillsList {
        width: 60vw;
    }
}

@media screen and (min-width: 1440px) { }

